# stolon

./: LICENSE  README.md
.kiro/agents/: self-auditor.md
agents/code-expert/: README.md  system-prompt.md
agents/self-auditor/: README.md  principles.md  system-prompt.md
mcps/: c-debugger.json  debugger.json
netkit/: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
netkit/cmake/: netkit-utils.cmake
netkit/docs/: build.md
netkit/docs/superpowers/plans/: 2026-04-12-netkit-async-io.md
netkit/docs/superpowers/specs/: 2026-04-12-netkit-async-io-design.md
netkit/include/: netkit.h
netkit/include/netkit/: netkit-err.h  netkit-tcp.h  netkit-timer.h  netkit-types.h  netkit-udp.h
netkit/src/: err.h  handle.h  heap.c  heap.h  loop.h  netkit-err.c  netkit-loop.c  netkit-tcp.c  netkit-tcp.h  netkit-timer.c  netkit-timer.h  netkit-udp.c  netkit-udp.h  op.c  op.h  timer.h  udp.h
netkit/tests/: CMakeLists.txt  assert.h  test-err.c  test-heap.c  test-loop.c  test-tcp.c  test-timer.c  test-udp.c
skills/c-development/: README.md  SKILL.md
skills/c-development/references/: build.md  debug.md  deploy.md  deps.md  setup.md  style.md  test.md
skills/c-development/scripts/: install-deps.ps1  install-deps.sh
skills/c-development/steering/: build.md  codestyle.md  debug.md  deploy.md  deps.md  init.md  setup.md  style.md  tech.md  test.md
skills/c-project-build/: SKILL.md
skills/c-project-build/references/: build.md
skills/c-project-commit/: SKILL.md
skills/c-project-commit/references/: commit.md
skills/c-project-debug/: README.md  SKILL.md
skills/c-project-debug/references/: debug.md
skills/c-project-debug/scripts/: install-deps.ps1  install-deps.sh
skills/c-project-debug/steering/: debug.md  principles.md
skills/c-project-dev/: README.md
skills/c-project-init/: README.md  SKILL.md
skills/c-project-init/references/: setup.md
skills/c-project-init/scripts/: install-deps.ps1  install-deps.sh
skills/c-project-init/steering/: codestyle.md  debug.md  license.md  principles.md  product.md  structure.md  tech.md
skills/c-project-init/templates/app/: CMakeLists.txt
skills/c-project-style/: SKILL.md
skills/c-project-style/references/: style.md
skills/c-scaffold/: README.md  SKILL.md
skills/c-scaffold/references/: setup.md
sub-agents/code-expert/: README.md  system-prompt.md
sub-agents/self-auditor/: README.md  principles.md  system-prompt.md
tests/: README.md  run-eval.sh  run_diff.py  run_eval.py  run_integration.py  run_regression.py  run_smoke.py
tests/evals/c-development/: checks.py  (+2 more)
tests/evals/c-development/baselines/setup_app_basic/project/: CMakeLists.txt  LICENSE  README.md
tests/evals/c-development/baselines/setup_app_basic/project/cmake/: hello-world-utils.cmake
tests/evals/c-development/baselines/setup_app_basic/project/docs/: build.md
tests/evals/c-development/baselines/setup_app_basic/project/src/: main.c
tests/evals/c-development/baselines/setup_app_basic/project/tests/: CMakeLists.txt  assert.h
tests/evals/c-development/baselines/setup_lib_basic/project/: CMakeLists.txt  LICENSE  README.md
tests/evals/c-development/baselines/setup_lib_basic/project/cmake/: my-utils-utils.cmake
tests/evals/c-development/baselines/setup_lib_basic/project/docs/: build.md
tests/evals/c-development/baselines/setup_lib_basic/project/include/: my-utils.h
tests/evals/c-development/baselines/setup_lib_basic/project/tests/: CMakeLists.txt  assert.h
tests/evals/c-project-init/baselines/setup_app_basic/project/: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
tests/evals/c-project-init/baselines/setup_app_basic/project/cmake/: xprobe-utils.cmake
tests/evals/c-project-init/baselines/setup_app_basic/project/docs/: build.md
tests/evals/c-project-init/baselines/setup_app_basic/project/src/: main.c
tests/evals/c-project-init/baselines/setup_app_basic/project/src/platform/: platform.h
tests/evals/c-project-init/baselines/setup_app_basic/project/tests/: CMakeLists.txt  assert.h
tests/evals/c-project-init/baselines/setup_app_windows/project/: AUTHORS  CMakeLists.txt  LICENSE  README.md  build.bat
tests/evals/c-project-init/baselines/setup_app_windows/project/cmake/: svcmon-utils.cmake
tests/evals/c-project-init/baselines/setup_app_windows/project/docs/: build.md
tests/evals/c-project-init/baselines/setup_app_windows/project/src/: main.c
tests/evals/c-project-init/baselines/setup_app_windows/project/tests/: CMakeLists.txt  assert.h
tests/evals/c-project-init/baselines/setup_lib_unix/project/: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  build.sh
tests/evals/c-project-init/baselines/setup_lib_unix/project/cmake/: logkit-utils.cmake
tests/evals/c-project-init/baselines/setup_lib_unix/project/docs/: build.md
tests/evals/c-project-init/baselines/setup_lib_unix/project/include/: logkit.h
tests/evals/c-project-init/baselines/setup_lib_unix/project/tests/: CMakeLists.txt  assert.h
tests/evals/c-scaffold/baselines/setup_app_basic/project/: AUTHORS  CMakeLists.txt  LICENSE  README.md
tests/evals/c-scaffold/baselines/setup_app_basic/project/cmake/: xapp-utils.cmake
tests/evals/c-scaffold/baselines/setup_app_basic/project/docs/: build.md  style.md  test.md
tests/evals/c-scaffold/baselines/setup_app_basic/project/src/platform/: platform.h
tests/evals/c-scaffold/baselines/setup_app_basic/project/tests/: CMakeLists.txt  assert.h
tests/evals/c-scaffold/baselines/setup_lib_basic/project/: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
tests/evals/c-scaffold/baselines/setup_lib_basic/project/cmake/: xlib-utils.cmake
tests/evals/c-scaffold/baselines/setup_lib_basic/project/docs/: build.md  style.md  test.md
tests/evals/c-scaffold/baselines/setup_lib_basic/project/examples/: CMakeLists.txt
tests/evals/c-scaffold/baselines/setup_lib_basic/project/include/: xlib.h
tests/evals/c-scaffold/baselines/setup_lib_basic/project/src/platform/: platform.h
tests/evals/c-scaffold/baselines/setup_lib_basic/project/tests/: CMakeLists.txt  assert.h
(+108 files in other folders)
